<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp">

        <TextView
            android:id="@+id/create_account_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/create_account_hint"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/create_account_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_account_tv_title"
            android:hint="@string/account_name_hint" />

        <EditText
            android:id="@+id/create_account_et_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_account_et_name"
            android:hint="@string/starting_balance_hint"
            android:inputType="numberDecimal"/>

        <Spinner
            android:id="@+id/create_account_spn_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/type"
            android:layout_below="@id/create_account_et_balance"
            style="@android:style/Widget.Holo.Light.Spinner"/>

        <Button
            android:id="@+id/create_account_btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_account_spn_type"
            android:layout_centerHorizontal="true"
            android:text="@string/submit_button_text"
            android:onClick="submitAccountInfo"/>

    </RelativeLayout>
</ScrollView>