<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="25dp" android:paddingRight="25dp"
    android:paddingTop="30dp"  android:paddingBottom="20dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/start_menu_tv_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/main_text"
        android:gravity="center"
        />

    <Button
        android:id="@+id/start_menu_btn_create_first_admin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/create_first_admin"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:layout_below="@+id/start_menu_tv_title"
        android:onClick="createFirstAdmin"
        />

    <Button
        android:id="@+id/start_menu_btn_access_admin_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/select_admin"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:layout_below="@+id/start_menu_btn_create_first_admin"
        android:onClick="accessAdminLogin"
        />

    <Button
        android:id="@+id/start_menu_btn_access_teller_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/start_menu_btn_access_admin_login"
        android:background="@drawable/round_button"
        android:text="@string/select_teller_terminal"
        android:onClick="accessTellerLogin"
        />

    <Button
        android:id="@+id/start_menu_btn_access_atm_login"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/start_menu_btn_access_teller_login"
        android:background="@drawable/round_button"
        android:text="@string/select_atm"
        android:onClick="accessCustomerLogin"
        />

</RelativeLayout>
